static/css/main.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: auto;
  height: auto;
  font-family: "Open Sans", sans-serif;
}
html {
  scroll-behavior: smooth;
}
body {
  background-color: #ebf3ff;
}
/*header*/
header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transition: 0.6s;
  padding: 40px 100px;
  z-index: 1000000;
}
header .sticky {
  padding: 5px 100px;
  background-color: #003459;
}
header .logo {
  position: relative;
  font-weight: 700;
  color: #003459;
  text-decoration: none;
  font-size: 2em;
  text-transform: uppercase;
  letter-spacing: 2px;
  transition: 0.6s;
}
header ul {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.title-caption {
  right: 100%;
}

header ul li {
  position: relative;
  list-style: none;
}
header ul li a {
  position: relative;
  margin: 0 15px;
  text-decoration: none;
  color: #003459;
  letter-spacing: 2px;
  font-weight: 500px;
  transition: 0.6s;
}
header .sticky .logo,
header .sticky ul li a {
  color: #ebf3ff;
}
.button {
  border-radius: 12px;
  padding: 10px 35px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  transition-duration: 0.4s;
  cursor: pointer;
}
.log {
  background-color: #ebf3ff;
  color: #003459;
  border: 2px solid #003459;
}
.log:hover {
  background-color: #003459;
  color: #ebf3ff;
}
.container .home {
  position: relative;
  width: 100%;
  height: 600px;
}
/*home*/
.container .home h1 {
  text-align: center;
  font-size: 50px;
  color: #003459;
  padding: 200px;
}
.scroll-down {
  height: 50px;
  width: 30px;
  border: 2px solid #003459;
  position: absolute;
  left: 50%;
  border-radius: 50px;
  cursor: pointer;
  align-items: center;
  bottom: 200px;
}
.scroll-down::before,
.scroll-down::after {
  content: "";
  position: absolute;
  top: 20%;
  left: 50%;
  height: 10px;
  width: 10px;
  transform: translate(-50%, -100%) rotate(45deg);
  border: 2px solid #003459;
  border-top: transparent;
  border-left: transparent;
  animation: scroll-down 1s ease-in-out infinite;
}
.scroll-down::before {
  top: 30%;
  animation-delay: 0.3s;
  /* animation: scroll-down 1s ease-in-out infinite; */
}
@keyframes scroll-down {
  0% {
    /* top:20%; */
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  60% {
    opacity: 1;
  }
  100% {
    top: 90%;
    opacity: 0;
  }
}
/*mission*/
.container .mission {
  height: 1000px;
  text-align: center;
  justify-content: center;
}
.container .mission h1 {
  text-align: center;
  font-size: 80px;
  font-weight: bold;
  color: #003459;
  padding-top: 150px;
  padding-bottom: 50px;
  justify-content: center;
}

.mission-title {
  padding-left: 170px;
}
.imgmis {
  width: auto;
  height: 200px;
  border-radius: 20px;
}
.img1 {
  padding-left: 120px;
}
.img2 {
  margin-top: 250px;
  padding-left: 880px;
}
.p1 {
  font-family: "Montserrat Alternates", sans-serif;
  padding-right: 50px;
  font-weight: bold;
  font-size: 30px;
  text-align: right;
  margin-top: -160px;
}
.p2 {
  text-align: left;
  font-family: "Montserrat Alternates", sans-serif;
  font-weight: bold;
  font-size: 30px;
  padding-left: 100px;
  margin-top: -180px;
}
/*help*/
.container .help {
  height: 600px;
  padding: 100px;
  color: #003459;
}
.container .help h1 {
  text-align: center;
  font-size: 50px;
  color: #003459;
  padding-top: 150px;
  padding-bottom: 50px;
}
/*devs*/
.container .devs {
  height: 600px;
  color: #003459;
}
.container .devs h1 {
  text-align: center;
  font-size: 50px;
  color: #003459;
  padding-top: 150px;
}
.row {
  padding: 100px;
}
.column {
  float: left;
  width: 25%;
  padding: 3px;
}
.column img {
  height: 300px;
}

